Updating the Dockerfile

--- a/community/Dockerfile
+++ b/community/Dockerfile
@@ -1,17 +1,11 @@
 FROM ubuntu:18.04
 
-ARG AntMediaServer
-
 WORKDIR /home
-
-RUN apt-get update \
-    && apt-get install -y curl libcap2 wget net-tools \
-    && apt-get autoclean \
-    && apt-get clean \
-    && apt-get autoremove
 
 ADD ./app .
 
-RUN ./install_ant-media-server.sh antMediaServerCommunity.zip
+RUN ./install_ant-media-server.sh antMediaServerCommunity.zip \
+    && rm -f install_ant-media-server.sh antMediaServerCommunity.zip \
+    && rm -f antMediaServerCommunity.zip
 
 ENTRYPOINT ["/usr/local/antmedia/start.sh"]
